# BlogProject

./: .gitignore  makefile  requirements.txt
DjangoAdminPage/: apps.py
backend/: README.md  admin.py  models.py  pyproject.toml  serializers.py  test.db  urls.py  views.py
backend/app/: main.py
backend/app/api/: auth.py  post.py
backend/app/core/: security.py
backend/app/db/: database.py  models.py
backend/app/schemas/: auth.py  post.py
backend/tests/: conftest.py  test_auth.py  test_post.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Header.tsx  LoginModal.css  LoginModal.tsx  SignUpModal.tsx
frontend/src/pages/: add-post.tsx  main.tsx  manage.tsx  post.tsx
src/: settings.py  urls.py
